--- a/src/viewmodels/signup/signup.html
+++ b/src/viewmodels/signup/signup.html
@@ -11,13 +11,31 @@
         <input name="lastname" placeholder="Last Name" type="text" value.bind="lastName">
       </div>
     </div>
-    <div class="field">
-      <label>Email</label>
-      <input name="mail" placeholder="Email" type="text" value.bind="email">
+    <div class="two fields">
+      <div class="field">
+        <label>Gender</label>
+        <select name="gender" class="ui dropdown" value.bind="gender">
+          <!--<option selected="selected"></option>-->
+          <option repeat.for="gender of genders"
+                  model.bind="gender">
+            ${gender}
+          </option>
+        </select>
+      </div>
+      <div class="field">
+        <label>Email</label>
+        <input name="mail" placeholder="Email" type="text" value.bind="email">
+      </div>
     </div>
-    <div class="field">
-      <label>Password</label>
-      <input name="password" type="password" value.bind="password">
+    <div class="two fields">
+      <div class="field">
+        <label>Password</label>
+        <input name="password" placeholder="Password" type="password" value.bind="password">
+      </div>
+      <div class="field">
+        <label>Confirm Password</label>
+        <input placeholder="Confirm Password" name="passwordConfirm" type="password">
+      </div>
     </div>
     <button class="ui blue button">Submit</button>
   </form>
