Added welcome message to home route

--- a/src/viewmodels/home/home.html
+++ b/src/viewmodels/home/home.html
@@ -1,5 +1,10 @@
 <template>
 
-  Welcome
+  <div class="ui center aligned segment">
+      <label>Hello ${authenticatedUser.firstName}, nice to see you again</label>
+      <div class="field">
+        <i class="smile icon" aria-hidden="true"></i>
+      </div>
+  </div>
 
 </template>
