Changed input field of tweet to textarea with maxLength 140 (as stated in assignment) Added JQuery function which counts down to 140 showing the user the left chars

--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -24,7 +24,12 @@
               <img class="ui fluid rounded image" id="imagePreview" src="">
             </div>
             <div class="field">
-              <input type="text" name="tweetInput" placeholder="Share your thoughts" value.bind="tweetInput">
+              <textarea id="tweetInput" name="tweetInput" maxlength="140" placeholder="Share whatever you like" value.bind="tweetInput">
+                Share whatever you like
+              </textarea>
+              <div class="">
+              <p id="counter"></p>
+              </div>
             </div>
             <div class="field">
               <input type="file" name="tweetImage" id="fileInput" accept="image/*" files.bind="tweetImage"  style="display:none">
