Added missing placeholder to password component on login site

--- a/src/viewmodels/login/login.html
+++ b/src/viewmodels/login/login.html
@@ -4,11 +4,11 @@
     <h3 class="ui header">Log-in</h3>
     <div class="field">
       <label>Email</label>
-      <input name="mail" placeholder="email" value.bind="email"/>
+      <input name="mail" placeholder="Email" value.bind="email"/>
     </div>
     <div class="field">
       <label>Password</label>
-      <input name="password" type="password" value.bind="password"/>
+      <input name="password" placeholder="Password" type="password" value.bind="password"/>
     </div>
     <button class="ui blue button">Login</button>
     <h3>${prompt}</h3>
