path for pictures

--- a/src/viewmodels/timeline/timeline.html
+++ b/src/viewmodels/timeline/timeline.html
@@ -7,8 +7,8 @@
       <div class="ui fluid raised card">
         <div class="extra content">
           <div class="left floated author">
-            <img if.bind="authenticatedUser.gender === 'Female'" src="/src/assets/avatars/kristy.png" class="ui avatar image">
-            <img if.bind="authenticatedUser.gender === 'Male'" src="/src/assets/avatars/christian.jpg" class="ui avatar image">
+            <img if.bind="authenticatedUser.gender === 'Female'" src="../../assets/avatars/kristy.png" class="ui avatar image">
+            <img if.bind="authenticatedUser.gender === 'Male'" src="../../assets/avatars/christian.jpg" class="ui avatar image">
             ${authenticatedUser.firstName} ${authenticatedUser.lastName}
           </div>
           <div class="right floated">
